# rapidocr-colab-demo

./: CLAUDE.md  README.md  main.ipynb  main.py  pyproject.toml
